--- a/own_style.css
+++ b/own_style.css
@@ -9,7 +9,7 @@
 }
 
 .fight-stick.disconnected {
-    background: url(https://drive.google.com/open?id=1Luq70t0w47OV-zbnFXxrXnggX-IZmMqK) no-repeat;
+    background: url(https://raw.githubusercontent.com/GBiburli/stuffs/master/disconnected.svg) no-repeat;
 }
 
 .fight-stick.disconnected div {
