--- a/own_style.css
+++ b/own_style.css
@@ -3,7 +3,7 @@
 
 
 .controller.fight-stick {
-    background: url(https://drive.google.com/open?id=1Gu9qUEdboWKtMrn_r126R_iigIcz_DQX) center no-repeat;
+    background: url(https://github.com/GBiburli/stuffs/blob/master/base0.svgz) center no-repeat;
     height: 534px;
     width: 1122px;
 }
